# cargo-tree-mermaid

./: .gitignore  Cargo.toml  readme.md
src/: args.rs  main.rs  mermaid_graph.rs  metadata.rs
